--- a/.github/workflows/build-pages.yaml
+++ b/.github/workflows/build-pages.yaml
@@ -34,15 +34,19 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Build AsciiDoc
-        run: asciidoctor -r asciidoctor-diagram -r asciidoctor-mathematical -o build/book.html book.adoc
-        working-directory: docs
+
       - name: Install AsciiDoctor
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.2'
       - name: Install AsciiDoctor
         run: gem install asciidoctor asciidoctor-diagram asciidoctor-mathematical
+      - name: Build AsciiDoc (HTML)
+        run: asciidoctor -r asciidoctor-diagram -r asciidoctor-mathematical -o build/book.html book.adoc
+        working-directory: docs
+      - name: Build AsciiDoc (PDF)
+        run: asciidoctor-pdf -r asciidoctor-diagram -r asciidoctor-mathematical -o build/book.pdf book.adoc
+        working-directory: docs
       - name: Archive Book
         uses: actions/upload-artifact@v2
         with:
@@ -57,17 +61,23 @@ jobs:
       cancel-in-progress: true
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
     needs:
       - build_pages
       - build_docs
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Download pages
         uses: actions/download-artifact@v2
         with:
           name: pages
-          path: pages/build
+          path: pages
       - name: Download book
         uses: actions/download-artifact@v2
         with:
           name: book
-          path: docs/build
+          path: docs
