--- a/.github/workflows/build-pages.yaml
+++ b/.github/workflows/build-pages.yaml
@@ -33,7 +33,7 @@ jobs:
   build_docs:
     runs-on: ubuntu-latest
     name: Build Book
-    container: ghcr.io/asciidoctor/asciidoctor:cache
+    container: asciidoctor/docker-asciidoctor
     env:
       PARAMS: "-r asciidoctor-diagram -r asciidoctor-mathematical -o build/book.html book.adoc"
     steps:
