--- a/.github/workflows/build-pages.yaml
+++ b/.github/workflows/build-pages.yaml
@@ -35,15 +35,15 @@ jobs:
     name: Build Book
     container: asciidoctor/docker-asciidoctor
     env:
-      PARAMS: "-r asciidoctor-diagram -r asciidoctor-mathematical -o build/book.html book.adoc"
+      PARAMS: "-r asciidoctor-diagram -r asciidoctor-mathematical"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Build AsciiDoc (HTML)
-        run: asciidoctor $PARAMS
+        run: asciidoctor $PARAMS -o build/book.html book.adoc
         working-directory: docs
       - name: Build AsciiDoc (PDF)
-        run: asciidoctor-pdf $PARAMS
+        run: asciidoctor-pdf $PARAMS -o build/book.pdf book.adoc
         working-directory: docs
       - name: Archive Book
         uses: actions/upload-artifact@v3
