--- a/.github/workflows/build-pages.yaml
+++ b/.github/workflows/build-pages.yaml
@@ -29,7 +29,7 @@ jobs:
           name: pages
           path: pages/build
           if-no-files-found: error
-  build_docs:
+  build_book:
     runs-on: ubuntu-latest
     name: Build Book
     container: asciidoctor/docker-asciidoctor
@@ -39,7 +39,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Build AsciiDoc (HTML)
-        run: asciidoctor $PARAMS -o build/book.html book.adoc
+        run: asciidoctor $PARAMS -o build/index.html book.adoc
         working-directory: docs
       - name: Build AsciiDoc (PDF)
         run: asciidoctor-pdf $PARAMS -o build/book.pdf book.adoc
@@ -53,7 +53,6 @@ jobs:
   create_github_pages:
     name: Merge
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
     needs:
       - build_pages
       - build_docs
@@ -77,6 +76,7 @@ jobs:
   deploy_github_pages:
     runs-on: ubuntu-latest
     name: Deploy to GitHub Pages
+    if: github.ref == 'refs/heads/main'
     needs:
       - create_github_pages
     concurrency:
