--- a/.github/workflows/build-pages.yaml
+++ b/.github/workflows/build-pages.yaml
@@ -1,17 +1,19 @@
 on:
   push:
-
     paths:
       - 'docs/**'
       - '.github/workflows/build-pages.yaml'
       - 'pages/**'
-    branches-ignore:
-      - renovate/**
+    branches:
+      - main
   pull_request:
+    branches:
+      - main
     paths:
       - 'docs/**'
       - '.github/workflows/build-pages.yaml'
       - 'pages/**'
+
 jobs:
   build_pages:
     runs-on: ubuntu-latest
@@ -84,7 +86,7 @@ jobs:
   deploy_github_pages:
     runs-on: ubuntu-latest
     name: Deploy to GitHub Pages
-    if: github.head_ref == 'main' || github.base_ref == 'main'
+    if: github.ref == 'refs/head/main' || github.base_ref == 'main'
     needs:
       - create_github_pages
     concurrency:
