--- a/.github/workflows/build-pages.yaml
+++ b/.github/workflows/build-pages.yaml
@@ -104,6 +104,6 @@ jobs:
         id: deployment
         with:
           preview: true
-          artifact-name: github-pages
+          artifact_name: github-pages
 
 
