--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,3 +6,34 @@ on:
       - '.github/workflows/build-pages.yaml'
       - 'pages/**'
 
+jobs:
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        TARGET:
+          - TARGET: 'x86_64-unknown-linux-gnu',
+            PLATFORM: 'ubuntu-latest',
+          - TARGET: 'x86_64-pc-windows-msvc',
+            PLATFORM: 'windows-latest',
+          - TARGET: 'x86_64-apple-darwin',
+            PLATFORM: 'macos-latest'
+          - TARGET: 'aarch64-apple-darwin',
+            PLATFORM: 'macos-latest',
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Rust
+        uses: actions-rs/toolchain@v1.0.6
+        with:
+          toolchain: stable
+          override: true
+          target: ${{ matrix.TARGET }}
+          components: clippy
+      - name: Build
+        # TODO build all subprojects
+        run: cargo build --target ${{ matrix.TARGET.TARGET }}
+
