--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,7 +13,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        PLATFORM: [ubuntu-latest, macos-latest, windows-latest]
+        PROJECT: [ '.', 'gateway','database' ]
+        PLATFORM: [ ubuntu-latest, macos-latest, windows-latest ]
+    defaults:
+      run:
+        working-directory: ${{ matrix.PROJECT }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -27,11 +31,8 @@ jobs:
       - name: Clippy
         run: cargo clippy
       - name: Build
-        # TODO build all subprojects
         run: cargo build
       - name: Test
         run: cargo test
-      - name: Benchmark
-        run: cargo bench
 
 
