--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,6 +28,15 @@ jobs:
           override: true
           target: ${{ matrix.TARGET }}
           components: clippy
+      - name: Build Cache
+        uses: actions/cache@v3
+        continue-on-error: false
+        with:
+          path: |
+            target/
+            ~/.cargo/
+          key: ${{ runner.os }}-rs-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: ${{ runner.os }}-rs-
       - name: Clippy
         run: cargo clippy
       - name: Build
