--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,8 +35,8 @@ jobs:
           path: |
             target/
             ~/.cargo/
-          key: ${{ runner.os }}-rs-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: ${{ runner.os }}-rs-
+          key: ${{ runner.os }}-rs-${{ matrix.TARGET }}-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: ${{ runner.os }}-rs-${{ matrix.TARGET }}-
       - name: Clippy
         run: cargo clippy
       - name: Build
