--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -45,12 +45,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        PLATFORM: [ ubuntu-latest, macos-latest, windows-latest ]
         include:
           - PLATFORM : ubuntu-latest
             TARGET: aarch64-unknown-linux-gnu
           - PLATFORM : macos-latest
             TARGET: aarch64-apple-darwin
+          # TODO windows on arm
     steps:
       - name: Checkout
         uses: actions/checkout@v4
