--- a/database/Cargo.toml
+++ b/database/Cargo.toml
@@ -6,5 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+get-port = "4.0.0"
 migration = { path = "migration" }
 sea-orm = { version = "0.12.7", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
+tokio = { version = "1.34.0", features = ["full"] }
+#sea-orm-migration={version = "0.12.6",features = ["runtime-tokio-rustls","sqlx-postgres"]}
+
+[dev-dependencies]
+pg-embed = { version = "0.7.1", features = ["rt_tokio"] }
